# event_management_test_task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/config/: celery.py  settings.py  urls.py
src/events/: filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/events/migrations/: 0001_initial.py
src/users/: models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
src/users/migrations/: 0001_initial.py
