[tool.poetry]
name = "event-management"
version = "0.1.0"
description = ""
authors = ["Ivan Berestianyi <berestvania@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
redis = "^5.0.8"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
